--- a/confFileExample.cfg
+++ b/confFileExample.cfg
@@ -4,15 +4,15 @@
 polarity = -1, -1, -1, -1 # four values, one for each channel, always pus as many as number of channels
 
 # threshold on signals to accept events [V], absolute value. Events pass the cut only if all the channels are above threshold
-threshold = 0.1, 0.1, 0, 0.1
+threshold = 0.03, 0.03, 0.1, 0.03
 
 # timing thresholds for constant fraction discriminator
 fractionThr = 0.5, 0.5, 0, 0.5
 
 # noise and baseline estimation interval extremes on the time axis
-baseStart =
-baseStop =
+baseStart = 75e-9, 75e-9, 10e-9, 65e-9
+baseStop = 85e-9, 85e-9, 20e-9, 75e-9
 
 # signal interval, where the signal properties are evaluated, max is looked for etc.
-signalStart =
-signalStop = 
+signalStart = 85e-9, 85e-9, 20e-9, 75e-9
+signalStop = 130e-9, 130e-9, 60e-9, 120e-9
