added cut on maximum signal amplitude

--- a/confFileExample.cfg
+++ b/confFileExample.cfg
@@ -6,6 +6,9 @@ polarity = -1, -1, -1, -1 # four values, one for each channel, always pus as man
 # threshold on signals to accept events [V], absolute value. Events pass the cut only if all the channels are above threshold
 threshold = 0.03, 0.03, 0.1, 0.03
 
+# cut on the highest allowed amplitude [V] for a signal to be processed, absolute value. Events pass the cut only if all the channels are above threshold
+maxAmpli = 0.7, 0.7, 5, 0.73
+
 # timing thresholds for constant fraction discriminator
 fractionThr = 0.5, 0.5, 0.5, 0.5
 
