added storage of combination of channels for timing

--- a/confFileExample.cfg
+++ b/confFileExample.cfg
@@ -9,9 +9,6 @@ threshold = 0.03, 0.03, 0.1, 0.03
 # cut on the highest allowed amplitude [V] for a signal to be processed, absolute value. Events pass the cut only if all the channels are above threshold
 maxAmpli = 0.7, 0.7, 5, 0.73
 
-# timing thresholds for constant fraction discriminator
-fractionThr = 0.5, 0.5, 0.5, 0.5
-
 # noise and baseline estimation interval extremes on the time axis
 baseStart = 75e-9, 75e-9, 10e-9, 65e-9
 baseStop = 85e-9, 85e-9, 20e-9, 75e-9
@@ -19,3 +16,9 @@ baseStop = 85e-9, 85e-9, 20e-9, 75e-9
 # signal interval, where the signal properties are evaluated, max is looked for etc.
 signalStart = 85e-9, 85e-9, 20e-9, 75e-9
 signalStop = 130e-9, 130e-9, 60e-9, 120e-9
+
+# pairs of channels for timing, ch number starting from 1
+timingPairs = 1-2, 4-1, 4-2
+
+# timing thresholds for constant fraction discriminator (put a threshold for each channel!)
+fractionThr = 0.5, 0.5, 0.5, 0.5
