added rise time cut, moved rise time, rise edge points, and t0 from linear regression to analyzeScopeData class

--- a/confFileExample.cfg
+++ b/confFileExample.cfg
@@ -6,8 +6,11 @@ polarity = -1, -1, -1, -1 # four values, one for each channel, always pus as man
 # threshold on signals to accept events [V], absolute value. Events pass the cut only if all the channels are above threshold
 threshold = 0.03, 0.03, 0.1, 0.03
 
-# cut on the highest allowed amplitude [V] for a signal to be processed, absolute value. Events pass the cut only if all the channels are above threshold
+# cut on the highest allowed amplitude [V] for a signal to be processed, absolute value. Events pass the cut only if all the channels are below the mazAmpli value
 maxAmpli = 0.7, 0.7, 5, 0.73
+
+# cut on the risetime [s] to exclude noise events. Events pass the cut only if all channels have a rise time below the specified one
+maxRiseTime = 1e-9, 1e-9, 5, 5
 
 # noise and baseline estimation interval extremes on the time axis
 baseStart = 75e-9, 75e-9, 10e-9, 65e-9
