added minimum and maximum event number to be processed

--- a/confFileExample.cfg
+++ b/confFileExample.cfg
@@ -1,5 +1,9 @@
 # example of config file, this is a comment
 
+# first and last event to be processed, starting from 0. If maxEvent is 0, all events will be processed
+minEvent = 0
+maxEvent = 0
+
 # signal polarity
 polarity = -1, -1, -1, -1 # four values, one for each channel, always pus as many as number of channels
 
