added cut on minimum rise time

--- a/confFileExample.cfg
+++ b/confFileExample.cfg
@@ -13,6 +13,9 @@ threshold = 0.03, 0.03, 0.1, 0.03
 # cut on the highest allowed amplitude [V] for a signal to be processed, absolute value. Events pass the cut only if all the channels are below the mazAmpli value
 maxAmpli = 0.7, 0.7, 5, 0.73
 
+# cut on the risetime [s] to study signal properties
+minRiseTime = 0, 0, 0, 0
+
 # cut on the risetime [s] to exclude noise events. Events pass the cut only if all channels have a rise time below the specified one
 maxRiseTime = 1e-9, 1e-9, 5, 5
 
