added integration of signal and relative variables

--- a/confFileExample.cfg
+++ b/confFileExample.cfg
@@ -4,6 +4,9 @@
 minEvent = 0
 maxEvent = 0
 
+# oscilloscope termination, in Ohm
+termination = 50, 50, 50, 50
+
 # signal polarity
 polarity = -1, -1, -1, -1 # four values, one for each channel, always pus as many as number of channels
 
@@ -26,6 +29,10 @@ baseStop = 85e-9, 85e-9, 20e-9, 75e-9
 # signal interval, where the signal properties are evaluated, max is looked for etc.
 signalStart = 85e-9, 85e-9, 20e-9, 75e-9
 signalStop = 130e-9, 130e-9, 60e-9, 120e-9
+
+# start and stop times of the signal integral, relative to the 0 crossing time obtained from linear interpolation of the leading edge of the signal
+inteStart = -1e-9, -1e-9, -1e-9, -1e-9
+inteStop = 24e-9, 24e-9, 24e-9, 24e-9
 
 # pairs of channels for timing, ch number starting from 1
 timingPairs = 1-2, 4-1, 4-2
