added function or threshold time of crossing with a time over threshold cut

--- a/confFileAnalyzeScopeData.cfg
+++ b/confFileAnalyzeScopeData.cfg
@@ -39,3 +39,6 @@ timingPairs = 1-2, 4-1, 4-2
 
 # timing thresholds for constant fraction discriminator (put a threshold for each channel!)
 fractionThr = 0.5, 0.5, 0.5, 0.5
+
+# time over threshold cut for CFD, riseTime etc
+timeOverThreshold = 0.5e-9, 0.5e-9, 0.5e-9, 0.5e-9
