implemented finer selection of the signal region relative to the peak position in the signal

--- a/confFileAnalyzeScopeData.cfg
+++ b/confFileAnalyzeScopeData.cfg
@@ -22,13 +22,21 @@ minRiseTime = 0, 0, 0, 0
 # cut on the risetime [s] to exclude noise events. Events pass the cut only if all channels have a rise time below the specified one
 maxRiseTime = 1e-9, 1e-9, 5, 5
 
-# noise and baseline estimation interval extremes on the time axis
+# first (coarse) noise and baseline estimation interval extremes on the time axis, for preliminary determination 
 baseStart = 75e-9, 75e-9, 10e-9, 65e-9
 baseStop = 85e-9, 85e-9, 20e-9, 75e-9
 
-# signal interval, where the signal properties are evaluated, max is looked for etc.
+# first (coarse) signal interval, where the signal is searched
 signalStart = 85e-9, 85e-9, 20e-9, 75e-9
 signalStop = 130e-9, 130e-9, 60e-9, 120e-9
+
+# selection of signal and baseline based on the peaking point of the signal.
+# the intervals will be : blDuration, prePeak, (peaking point determined in analysis), postPeak
+# the signal and noise quantities will be determined using these intervals
+# make sure that the integral extremes defined below can be accomodated in these intervals
+blDuration = 10e-9, 10e-9, 10e9, 10e-9
+prePeak = 5e-9, 5e-9, 20e-9, 5e-9
+postPeak = 20e-9, 20e-9, 50e-9, 20e-9
 
 # start and stop times of the signal integral, relative to the 0 crossing time obtained from linear interpolation of the leading edge of the signal
 inteStart = -1e-9, -1e-9, -1e-9, -1e-9
