implemented track extrapolation to the DUT planes

--- a/confFileMergeTracking.cfg
+++ b/confFileMergeTracking.cfg
@@ -23,3 +23,13 @@ blStop = 75e-9
 # time interval used for looking for the signal [s]
 sigStart = 75e-9
 sigStop = 120e-9
+
+# number of planes used for track (re)fit, to get better resolution at the DUT
+nRecPlanes = 3
+
+# position of these planes in the vector of hits of the track tree
+recPlanes = 1, 3, 5
+
+# position in mm along the beam of the detectors connected to the oscilloscope (must be one position for each channel)
+# the beam propagates from positive to negative z, the first GEM of the telescope defines the 0 of z
+dutPos = -167, -201, 0, 500
