implemented delta t slices

--- a/confFileAnalyzeWithTracking.cfg
+++ b/confFileAnalyzeWithTracking.cfg
@@ -11,3 +11,6 @@ xSliceHigh = 33, 100, 100, 41
 
 ySliceLow = 23, -50, -50, 22
 ySliceHigh = 28, 50, 50, 28
+
+# pairs of channels for timing, ch number starting from 1
+timingPairs = 1-2, 4-1, 4-2
