implemented risetime and track chi2 cut. also the track must have hits on all the telescope planes (2 for each GEM plane)

--- a/confFileAnalyzeWithTracking.cfg
+++ b/confFileAnalyzeWithTracking.cfg
@@ -14,3 +14,12 @@ ySliceHigh = 28, 50, 50, 28
 
 # pairs of channels for timing, ch number starting from 1
 timingPairs = 1-2, 4-1, 4-2
+
+# maximum chi2 value of the tracks as reconstructed by the telescope SW
+trackMaxChi2 = 1
+
+# cut on the risetime [s] used in timing pairs, used for the dt distributions, both pulses from a pair must fullfill the cut
+minRiseTime = 0, 0, 0, 0
+
+# cut on the risetime [s] used in timing pairs, used for the dt distributions, both pulses from a pair must fullfill the cut
+maxRiseTime = 5, 5, 5, 5
