modified merge tracking to be able to start at any point in oscilloscope tree

--- a/confFileMergeTracking.cfg
+++ b/confFileMergeTracking.cfg
@@ -33,3 +33,7 @@ recPlanes = 1, 3, 5
 # position in mm along the beam of the detectors connected to the oscilloscope (must be one position for each channel)
 # the beam propagates from positive to negative z, the first GEM of the telescope defines the 0 of z
 dutPos = -167, -201, 0, 500
+
+# event from which to start reading the oscilloscope tree
+# different from 0 in case the tracking file starts later than the oscilloscope file
+startEvt = 0
